[package]
name = "engineering-repr"
description = "Numeric conversions for engineering notation (1.23k) and the RKM code variant (1k23)"
version = "1.0.0"
edition = "2021"
authors = ["Ross Younger <qcp@crazyscot.com>"]
license = "MIT"
repository = "https://github.com/crazyscot/engineering_repr/"
homepage = "https://github.com/crazyscot/engineering_repr/"
keywords = ["human", "engineering", "notation", "numbers", "configuration"]
categories = ["parsing", "mathematics"]

[dependencies]
document-features = { version = "0.2", optional = true }
num-integer = { version = "0.1" }
num-rational = { version = "0.4" }
num-traits = { version = "0.2", default-features = false }
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "2"

[dev-dependencies]
assertables = "9.5.0"
serde_json = "1.0"

[features]
default = []
## Enable serde support
##
## This feature implements [serde::Serialize] and [serde::Deserialize] for [EngineeringQuantity].
serde = ["dep:serde"]

[package.metadata.docs.rs]
all-features = true

[lints.rust]
dead_code = "warn"
elided_lifetimes_in_paths = "deny"
meta_variable_misuse = "deny"
missing_abi = "deny"
missing_copy_implementations = "deny"
missing_debug_implementations = "deny"
missing_docs = "warn"
non_ascii_idents = "deny"
single_use_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "deny"
unreachable_pub = "deny"
# unused_crate_dependencies = "deny" # false positives
unused_extern_crates = "deny"
unused_lifetimes = "deny"
unused_results = "deny"
variant_size_differences = "deny"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
missing_errors_doc = "allow"

[lints.rustdoc]
bare_urls = "deny"
broken_intra_doc_links = "deny"
invalid_codeblock_attributes = "deny"
invalid_html_tags = "deny"
invalid_rust_codeblocks = "deny"
missing_crate_level_docs = "deny"
private_intra_doc_links = "deny"
unescaped_backticks = "deny"
